platform/security/network-policies/apps-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apps-default-deny-ingress
  namespace: apps
  labels:
    app.kubernetes.io/name: apps-default-deny-ingress
    app.kubernetes.io/part-of: idp-platform
    idp.platform/tier: security
spec:
  podSelector: {}
  policyTypes:
    - Ingress
